--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,9 @@ board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 upload_speed = 921600
 board_build.partitions = noota_3g.csv
-lib_deps = ArduinoJson, ServoESP32
+lib_deps = 
+    AsyncTCP
+    ESP Async WebServer
+    ESPAsyncTCP
+    ServoESP32
+
