--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,10 @@ board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 upload_speed = 921600
-board_build.partitions = noota_3g.csv
+upload_protocol = espota
+upload_port = esp32.local
+;board_build.partitions = noota_3g.csv
+board_build.partitions = min_spiffs.csv
 lib_deps = 
     AsyncTCP
     ESP Async WebServer
