--- a/platformio.ini
+++ b/platformio.ini
@@ -8,19 +8,35 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+
+
+[env:esp32-ota]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-; set frequency to 240MHz
-board_build.f_cpu = 240000000L
-; set frequency to 80MHz
-board_build.f_flash = 80000000L
+board_build.f_cpu = 240000000L      ; set frequency to 240MHz
+board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 upload_speed = 921600
 upload_protocol = espota
 upload_port = esp32.local
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+    AsyncTCP
+    ESP Async WebServer
+    ESPAsyncTCP
+    ServoESP32
+
+[env:esp32-dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+board_build.f_cpu = 240000000L      ; set frequency to 240MHz
+board_build.f_flash = 80000000L     ; set frequency to 80MHz
+board_build.flash_mode = qio
+upload_speed = 921600
 ;board_build.partitions = noota_3g.csv
 board_build.partitions = min_spiffs.csv
 lib_deps = 
