--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,9 @@ lib_deps =
     ESP Async WebServer
     ESPAsyncTCP
     ServoESP32
-
+    TelnetSpy
+    Ticker-esp32
+    
 [env:esp32-ota]
 platform = espressif32
 board = esp32dev
