--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,22 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32-ota
+default_envs = esp8266-serial
 
 [env]
-;board_build.partitions = noota_3g.csv
+    
+[env:esp32-ota]
+platform = espressif32
+board = esp32dev
+framework = arduino
+;monitor_speed = 115200
+board_build.f_cpu = 240000000L      ; set frequency to 240MHz
+board_build.f_flash = 80000000L     ; set frequency to 80MHz
+board_build.flash_mode = qio
+upload_speed = 921600
+upload_protocol = espota
+upload_port = esp32.local
+targets = upload
 board_build.partitions = min_spiffs.csv
 lib_deps = 
     AsyncTCP
@@ -21,26 +33,49 @@ lib_deps =
     ServoESP32
     TelnetSpy
     Ticker-esp32
-    
-[env:esp32-ota]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-board_build.f_cpu = 240000000L      ; set frequency to 240MHz
-board_build.f_flash = 80000000L     ; set frequency to 80MHz
-board_build.flash_mode = qio
-upload_speed = 921600
-upload_protocol = espota
-upload_port = esp32.local
 
 [env:esp32-serial]
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 115200
 board_build.f_cpu = 240000000L      ; set frequency to 240MHz
 board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 upload_speed = 921600
+monitor_speed = 115200
+targets = upload, monitor
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+    AsyncTCP
+    ESP Async WebServer
+    ESPAsyncTCP
+    ServoESP32
+    TelnetSpy
+    Ticker-esp32
+
+[env:esp8266-serial]
+platform = espressif8266
+board = esp_wroom_02
+; change microcontroller
+board_build.mcu = esp8266
+framework = arduino
+platform_packages = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+; change MCU frequency
+board_build.f_cpu = 80000000L
+board_build.f_flash = 40000000L
+board_build.flash_mode = qio
+upload_protocol = esptool
+upload_resetmethod = ck
+upload_speed = 921600
+monitor_speed = 115200
+;targets = upload, monitor
+board_build.ldscript = eagle.flash.1m128.ld
+lib_deps = 
+    ArduinoMDNS
+    AsyncTCP
+    ESP Async WebServer
+    ESPAsyncTCP
+    TelnetSpy
+    ;Ticker
+
 
