modify esp32 and esp8266 can OTA check OK

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,15 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp8266-serial
-
-[env]
+default_envs = esp8266-ota
     
 [env:esp32-ota]
 platform = espressif32
 board = esp32dev
 framework = arduino
-;monitor_speed = 115200
+build_flags = 
+        -DESP32
 board_build.f_cpu = 240000000L      ; set frequency to 240MHz
 board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
@@ -27,55 +26,76 @@ upload_port = esp32.local
 targets = upload
 board_build.partitions = min_spiffs.csv
 lib_deps = 
-    AsyncTCP
-    ESP Async WebServer
-    ESPAsyncTCP
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/yasheena/telnetspy.git
     ServoESP32
-    TelnetSpy
     Ticker-esp32
 
 [env:esp32-serial]
 platform = espressif32
 board = esp32dev
 framework = arduino
+build_flags = 
+        -DESP32
 board_build.f_cpu = 240000000L      ; set frequency to 240MHz
 board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 upload_speed = 921600
-monitor_speed = 115200
+upload_port = /dev/cu.usbserial-DN05J1HS
+upload_protocol = esptool
+monitor_speed = 74880
 targets = upload, monitor
 board_build.partitions = min_spiffs.csv
 lib_deps = 
-    AsyncTCP
-    ESP Async WebServer
-    ESPAsyncTCP
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/yasheena/telnetspy.git
     ServoESP32
-    TelnetSpy
     Ticker-esp32
 
 [env:esp8266-serial]
 platform = espressif8266
 board = esp_wroom_02
-; change microcontroller
 board_build.mcu = esp8266
 framework = arduino
 platform_packages = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
-; change MCU frequency
+
 board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = qio
+build_flags = 
+        -DESP8266
+
+upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = esptool
 upload_resetmethod = ck
 upload_speed = 921600
-monitor_speed = 115200
-;targets = upload, monitor
+
+monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_speed = 74880
+targets = upload, monitor
 board_build.ldscript = eagle.flash.1m128.ld
-lib_deps = 
-    ArduinoMDNS
-    AsyncTCP
-    ESP Async WebServer
-    ESPAsyncTCP
-    TelnetSpy
-    ;Ticker
+lib_deps =     
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/yasheena/telnetspy.git
 
+[env:esp8266-ota]
+platform = espressif8266
+board = esp_wroom_02
+board_build.mcu = esp8266
+framework = arduino
+platform_packages = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
 
+board_build.f_cpu = 80000000L
+board_build.f_flash = 40000000L
+board_build.flash_mode = qio
+build_flags = 
+        -DESP8266
+
+upload_protocol = espota
+upload_port = esp8266.local
+targets = upload
+
+board_build.ldscript = eagle.flash.1m128.ld
+lib_deps =     
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/yasheena/telnetspy.git
