add setting function

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,11 +21,15 @@ build_flags =
 board_build.f_cpu = 240000000L      ; set frequency to 240MHz
 board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
-upload_speed = 921600
+
+monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_speed = 74880
 upload_protocol = espota
 upload_port = esp32.local
-targets = upload
+targets = upload, monitor
+
 board_build.partitions = min_spiffs.csv
+
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/yasheena/telnetspy.git
@@ -43,10 +47,10 @@ board_build.f_cpu = 240000000L      ; set frequency to 240MHz
 board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 upload_speed = 921600
-upload_port = /dev/cu.usbserial-DN05J1HS
+upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = esptool
 monitor_speed = 74880
-targets = upload, monitor
+targets = uplaodfs, upload, monitor
 board_build.partitions = min_spiffs.csv
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git
@@ -66,7 +70,7 @@ board_build.f_flash = 40000000L
 board_build.flash_mode = qio
 build_flags = 
         -DESP8266
-
+        
 upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = esptool
 upload_resetmethod = ck
@@ -93,9 +97,11 @@ board_build.flash_mode = qio
 build_flags = 
         -DESP8266
 
+monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_speed = 74880
 upload_protocol = espota
 upload_port = esp8266.local
-targets = upload
+targets = upload, monitor
 
 board_build.ldscript = eagle.flash.1m128.ld
 lib_deps =     
