--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ default_envs = esp8266-ota
 platform = espressif32
 board = esp32dev
 framework = arduino
+platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 build_flags = 
         -DESP32
         
@@ -22,7 +23,7 @@ board_build.f_cpu = 240000000L      ; set frequency to 240MHz
 board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 
-monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.usbserial-DN05J1HS
 monitor_speed = 74880
 upload_protocol = espota
 upload_port = esp32.local
@@ -40,6 +41,7 @@ lib_deps =
 platform = espressif32
 board = esp32dev
 framework = arduino
+platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 build_flags = 
         -DESP32
 
@@ -47,10 +49,10 @@ board_build.f_cpu = 240000000L      ; set frequency to 240MHz
 board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 upload_speed = 921600
-upload_port = /dev/cu.SLAB_USBtoUART
+upload_port = /dev/cu.usbserial-DN05J1HS
 upload_protocol = esptool
 monitor_speed = 74880
-targets = uplaodfs, upload, monitor
+targets = upload, monitor
 board_build.partitions = min_spiffs.csv
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git
