add setting sperk time and release time

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [platformio]
-default_envs = esp32-ota
-    
+;default_envs = esp32-ota
+default_envs = esp8266-ota
+
 [env:esp32-ota]
 platform = espressif32
 board = esp32dev
@@ -14,6 +15,9 @@ board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 
 monitor_speed = 115200
+monitor_port = /dev/cu.usbserial-DN05J1HS
+;monitor_port = COM4
+
 upload_protocol = espota
 upload_port = esp32.local
 targets = upload, monitor
@@ -40,6 +44,9 @@ board_build.f_flash = 80000000L     ; set frequency to 80MHz
 board_build.flash_mode = qio
 
 monitor_speed = 115200
+monitor_port = /dev/cu.usbserial-DN05J1HS
+;monitor_port = COM4
+
 upload_speed = 921600
 upload_protocol = esptool
 targets = upload, monitor
@@ -67,6 +74,9 @@ build_flags =
         -DESP8266
         
 monitor_speed = 74880
+monitor_port = /dev/cu.SLAB_USBtoUART
+;monitor_port = COM3
+
 upload_protocol = esptool
 upload_resetmethod = ck
 upload_speed = 921600
@@ -92,6 +102,8 @@ build_flags =
         -DESP8266
 
 monitor_speed = 74880
+monitor_port = /dev/cu.SLAB_USBtoUART
+;monitor_port = COM3
 upload_protocol = espota
 upload_port = esp8266.local
 targets = upload, monitor
