--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,6 @@
 [platformio]
 ;default_envs = esp32-ota
+;default_envs = esp8266-serial
 default_envs = esp8266-ota
 
 [env:esp32-ota]
@@ -26,6 +27,7 @@ board_build.partitions = min_spiffs.csv
 
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/AsyncTCP.git
     https://github.com/yasheena/telnetspy.git
     https://github.com/RoboticsBrno/ServoESP32.git
     https://github.com/bertmelis/Ticker-esp32.git
@@ -55,17 +57,18 @@ board_build.partitions = min_spiffs.csv
 
 lib_deps = 
     https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/AsyncTCP.git
     https://github.com/yasheena/telnetspy.git
     https://github.com/RoboticsBrno/ServoESP32.git
     https://github.com/bertmelis/Ticker-esp32.git
     https://github.com/bblanchon/ArduinoJson.git
 
 [env:esp8266-serial]
-platform = espressif8266
+platform = espressif8266@2.5.3
 board = esp_wroom_02
 board_build.mcu = esp8266
 framework = arduino
-platform_packages = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+platform_packages = framework-arduinoespressif8266
 
 board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
@@ -77,6 +80,7 @@ monitor_speed = 74880
 monitor_port = /dev/cu.SLAB_USBtoUART
 ;monitor_port = COM3
 
+upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = esptool
 upload_resetmethod = ck
 upload_speed = 921600
@@ -86,15 +90,17 @@ board_build.ldscript = eagle.flash.1m128.ld
 
 lib_deps =     
     https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/ESPAsyncTCP.git
     https://github.com/yasheena/telnetspy.git
+    https://github.com/bblanchon/ArduinoJson.git
 
 [env:esp8266-ota]
-platform = espressif8266
+platform = espressif8266@2.5.3
+framework = arduino
 board = esp_wroom_02
 board_build.mcu = esp8266
-framework = arduino
-platform_packages = framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
-
+;board_build.filesystem = littlefs
+platform_packages = framework-arduinoespressif8266
 board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = qio
@@ -112,4 +118,6 @@ board_build.ldscript = eagle.flash.1m128.ld
 
 lib_deps =     
     https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/ESPAsyncTCP.git
     https://github.com/yasheena/telnetspy.git
+    https://github.com/bblanchon/ArduinoJson.git
