--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 ;default_envs = esp32-ota
-;default_envs = esp8266-serial
-default_envs = esp8266-ota
+default_envs = esp8266-serial
+;default_envs = esp8266-ota
 
 [env:esp32-ota]
 platform = espressif32
@@ -64,12 +64,12 @@ lib_deps =
     https://github.com/bblanchon/ArduinoJson.git
 
 [env:esp8266-serial]
-platform = espressif8266@2.5.3
+platform = espressif8266@2.6.0
+framework = arduino
 board = esp_wroom_02
 board_build.mcu = esp8266
-framework = arduino
+board_build.filesystem = littlefs
 platform_packages = framework-arduinoespressif8266
-
 board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = qio
@@ -95,11 +95,11 @@ lib_deps =
     https://github.com/bblanchon/ArduinoJson.git
 
 [env:esp8266-ota]
-platform = espressif8266@2.5.3
+platform = espressif8266@2.6.0
 framework = arduino
 board = esp_wroom_02
 board_build.mcu = esp8266
-;board_build.filesystem = littlefs
+board_build.filesystem = littlefs
 platform_packages = framework-arduinoespressif8266
 board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
