Changing AP and STA mode is OK.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,5 @@
 [platformio]
+;default_envs = esp32-serial
 ;default_envs = esp32-ota
 default_envs = esp8266-serial
 ;default_envs = esp8266-ota
@@ -7,12 +8,13 @@ default_envs = esp8266-serial
 platform = espressif32
 board = esp32dev
 framework = arduino
-platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+platform_packages = framework-arduinoespressif32
 build_flags = 
         -DESP32
-        
-board_build.f_cpu = 240000000L      ; set frequency to 240MHz
-board_build.f_flash = 80000000L     ; set frequency to 80MHz
+        -D USE_EADNS
+
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 
 monitor_speed = 115200
@@ -21,28 +23,29 @@ monitor_port = /dev/cu.usbserial-DN05J1HS
 
 upload_protocol = espota
 upload_port = esp32.local
-targets = upload, monitor
+targets = upload
 
 board_build.partitions = min_spiffs.csv
 
 lib_deps = 
+    https://github.com/alanswx/ESPAsyncWiFiManager.git
     https://github.com/me-no-dev/ESPAsyncWebServer.git
-    https://github.com/me-no-dev/AsyncTCP.git
     https://github.com/yasheena/telnetspy.git
+    https://github.com/bblanchon/ArduinoJson.git
     https://github.com/RoboticsBrno/ServoESP32.git
-    https://github.com/bertmelis/Ticker-esp32.git
     https://github.com/bblanchon/ArduinoJson.git
 
 [env:esp32-serial]
 platform = espressif32
 board = esp32dev
 framework = arduino
-platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+platform_packages = framework-arduinoespressif32
 build_flags = 
         -DESP32
+        -D USE_EADNS
 
-board_build.f_cpu = 240000000L      ; set frequency to 240MHz
-board_build.f_flash = 80000000L     ; set frequency to 80MHz
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 
 monitor_speed = 115200
@@ -51,7 +54,7 @@ monitor_port = /dev/cu.usbserial-DN05J1HS
 
 upload_speed = 921600
 upload_protocol = esptool
-targets = upload, monitor
+targets = upload
 
 board_build.partitions = min_spiffs.csv
 
@@ -74,7 +77,8 @@ board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = qio
 build_flags = 
-        -DESP8266
+        -D ESP8266
+        -D USE_EADNS
         
 monitor_speed = 74880
 monitor_port = /dev/cu.SLAB_USBtoUART
@@ -84,13 +88,16 @@ upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = esptool
 upload_resetmethod = ck
 upload_speed = 921600
-targets = upload, monitor
+targets = upload
 
 board_build.ldscript = eagle.flash.1m128.ld
 
 lib_deps =     
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/ESPAsyncTCP.git
+    https://github.com/me-no-dev/ESPAsyncUDP.git
+    https://github.com/devyte/ESPAsyncDNSServer.git
+    https://github.com/alanswx/ESPAsyncWiFiManager.git
     https://github.com/yasheena/telnetspy.git
     https://github.com/bblanchon/ArduinoJson.git
 
@@ -105,19 +112,23 @@ board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = qio
 build_flags = 
-        -DESP8266
+        -D ESP8266
+        -D USE_EADNS
 
 monitor_speed = 74880
 monitor_port = /dev/cu.SLAB_USBtoUART
 ;monitor_port = COM3
 upload_protocol = espota
 upload_port = esp8266.local
-targets = upload, monitor
+targets = upload
 
 board_build.ldscript = eagle.flash.1m128.ld
 
 lib_deps =     
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/ESPAsyncTCP.git
+    https://github.com/me-no-dev/ESPAsyncUDP.git
+    https://github.com/devyte/ESPAsyncDNSServer.git
+    https://github.com/alanswx/ESPAsyncWiFiManager.git
     https://github.com/yasheena/telnetspy.git
     https://github.com/bblanchon/ArduinoJson.git
