change jquery ver

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 ;default_envs = esp32-serial
 ;default_envs = esp32-ota
-default_envs = esp8266-serial
-;default_envs = esp8266-ota
+;default_envs = esp8266-serial
+default_envs = esp8266-ota
 
 [env:esp32-ota]
 platform = espressif32
@@ -33,7 +33,7 @@ lib_deps =
     https://github.com/yasheena/telnetspy.git
     https://github.com/bblanchon/ArduinoJson.git
     https://github.com/RoboticsBrno/ServoESP32.git
-    https://github.com/bblanchon/ArduinoJson.git
+    https://github.com/bblanchon/ArduinoJson.git    
 
 [env:esp32-serial]
 platform = espressif32
@@ -100,6 +100,7 @@ lib_deps =
     https://github.com/alanswx/ESPAsyncWiFiManager.git
     https://github.com/yasheena/telnetspy.git
     https://github.com/bblanchon/ArduinoJson.git
+    https://github.com/bblanchon/ArduinoStreamUtils.git
 
 [env:esp8266-ota]
 platform = espressif8266@2.6.0
@@ -132,3 +133,4 @@ lib_deps =
     https://github.com/alanswx/ESPAsyncWiFiManager.git
     https://github.com/yasheena/telnetspy.git
     https://github.com/bblanchon/ArduinoJson.git
+    https://github.com/bblanchon/ArduinoStreamUtils.git
