--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 ;default_envs = esp32-serial
 ;default_envs = esp32-ota
-;default_envs = esp8266-serial
-default_envs = esp8266-ota
+default_envs = esp8266-serial
+;default_envs = esp8266-ota
 
 [env:esp32-ota]
 platform = espressif32
@@ -79,6 +79,7 @@ board_build.flash_mode = qio
 build_flags = 
         -D ESP8266
         -D USE_EADNS
+        -D ARDUINO_ARCH_ESP8266
         
 monitor_speed = 74880
 monitor_port = /dev/cu.SLAB_USBtoUART
@@ -88,7 +89,7 @@ upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = esptool
 upload_resetmethod = ck
 upload_speed = 921600
-targets = upload
+targets = upload, monitor
 
 board_build.ldscript = eagle.flash.1m128.ld
 
@@ -115,6 +116,7 @@ board_build.flash_mode = qio
 build_flags = 
         -D ESP8266
         -D USE_EADNS
+        -D ARDUINO_ARCH_ESP8266
 
 monitor_speed = 74880
 monitor_port = /dev/cu.SLAB_USBtoUART
