add Function Changing Config Mode and APmode

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 ;default_envs = esp32-serial
 ;default_envs = esp32-ota
-default_envs = esp8266-serial
-;default_envs = esp8266-ota
+;default_envs = esp8266-serial
+default_envs = esp8266-ota
 
 [env:esp32-ota]
 platform = espressif32
@@ -82,10 +82,11 @@ build_flags =
         -D ARDUINO_ARCH_ESP8266
         
 monitor_speed = 74880
-monitor_port = /dev/cu.SLAB_USBtoUART
-;monitor_port = COM3
+;monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_port = COM3
 
-upload_port = /dev/cu.SLAB_USBtoUART
+;upload_port = /dev/cu.SLAB_USBtoUART
+upload_port = COM3
 upload_protocol = esptool
 upload_resetmethod = ck
 upload_speed = 921600
@@ -119,11 +120,11 @@ build_flags =
         -D ARDUINO_ARCH_ESP8266
 
 monitor_speed = 74880
-monitor_port = /dev/cu.SLAB_USBtoUART
-;monitor_port = COM3
+;monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_port = COM3
 upload_protocol = espota
 upload_port = esp8266.local
-targets = upload
+targets = upload, monitor
 
 board_build.ldscript = eagle.flash.1m128.ld
 
