--- a/platformio.ini
+++ b/platformio.ini
@@ -1,110 +1,10 @@
 [platformio]
-;default_envs = esp8266-mac-serial 
-default_envs = esp8266-mac-ota
-;default_envs = esp8266-win-serial, esp8266-win-ota
-;default_envs = esp32-mac-serial, esp32-mac-ota
-;default_envs = esp32-win-serial, esp32-win-ota
+;default_envs = esp8266-mac-ota
+;default_envs = esp8266-mac-serial
+;extra_configs = platformio_esp8266.ini
 
-[env:esp8266-mac-serial]
-extends = esp8266, mac_monitor_esp8266, mac_upload_esp8266, serial
-
-[env:esp8266-mac-ota]
-extends = esp8266, mac_monitor_esp8266, ota
-
-[env:esp8266-win-serial]
-extends = esp8266, win_monitor_esp8266, win_upload_esp8266, serial
-
-[env:esp8266-win-ota]
-extends = esp8266, win_monitor_esp8266, ota
-
-;extends section
-[mac_monitor_esp32]
-monitor_port = /dev/cu.usbserial-DN05J1HS
-
-[mac_upload_esp32]
-upload_port =  /dev/cu.usbserial-DN05J1HS
-
-[mac_monitor_esp8266]
-monitor_port = /dev/cu.SLAB_USBtoUART
-
-[mac_upload_esp8266]
-upload_port = /dev/cu.SLAB_USBtoUART
-
-[win_monitor_esp32]
-monitor_port = COM4
-
-[win_upload_esp32]
-upload_port = COM4
-
-[win_monitor_esp8266]
-monitor_port = COM3
-
-[win_upload_esp8266]
-upload_port = COM3
-
-[ota]
-upload_protocol = espota
-upload_port = esp8266.local
-
-[serial]
-upload_protocol = esptool
-upload_speed = 921600
-
-[esp32]
-platform = espressif32
-framework = arduino
-board = esp32dev
-platform_packages = framework-arduinoespressif32
-build_flags = 
-        -D ESP32
-        -D USE_EADNS
-        -D ARDUINO_ARCH_ESP32
-
-board_build.mcu = esp32
-board_build.f_cpu = 240000000L
-board_build.f_flash = 80000000L
-board_build.flash_mode = qio
-board_build.partitions = min_spiffs.csv
-
-monitor_speed = 115200
-targets = upload, monitor
-
-lib_deps = 
-    https://github.com/alanswx/ESPAsyncWiFiManager.git
-    https://github.com/me-no-dev/ESPAsyncWebServer.git
-    https://github.com/yasheena/telnetspy.git
-    https://github.com/bblanchon/ArduinoJson.git
-    https://github.com/RoboticsBrno/ServoESP32.git
-    https://github.com/bblanchon/ArduinoJson.git    
-    https://github.com/bblanchon/ArduinoStreamUtils.git
-
-[esp8266]
-platform = espressif8266@2.6.0
-framework = arduino
-board = esp_wroom_02
-platform_packages = framework-arduinoespressif8266
-build_flags = 
-        -D ESP8266
-        -D USE_EADNS
-        -D ARDUINO_ARCH_ESP8266
-
-board_build.mcu = esp8266
-board_build.f_cpu = 80000000L
-board_build.f_flash = 40000000L
-board_build.flash_mode = qio
-board_build.ldscript = eagle.flash.1m128.ld
-board_build.filesystem = littlefs
+default_envs = esp32-mac-ota
+;default_envs = esp32-mac-serial
+extra_configs = platformio_esp32.ini
         
-monitor_speed = 74880
-targets = upload, monitor
-
-lib_deps =     
-    https://github.com/me-no-dev/ESPAsyncWebServer.git
-    https://github.com/me-no-dev/ESPAsyncTCP.git
-    https://github.com/me-no-dev/ESPAsyncUDP.git
-    https://github.com/devyte/ESPAsyncDNSServer.git
-    https://github.com/alanswx/ESPAsyncWiFiManager.git
-    https://github.com/yasheena/telnetspy.git
-    https://github.com/bblanchon/ArduinoJson.git
-    https://github.com/bblanchon/ArduinoStreamUtils.git
-
+        
