--- a/platformio_esp32.ini
+++ b/platformio_esp32.ini
@@ -20,7 +20,7 @@ targets = upload, monitor
 [esp32]
 platform = espressif32
 framework = arduino
-board = esp32dev
+board = lolin32
 platform_packages = framework-arduinoespressif32
 build_flags = 
         -D ESP32
