--- a/platformio.ini
+++ b/platformio.ini
@@ -3,8 +3,8 @@
 ;default_envs = esp8266-mac-serial
 ;extra_configs = platformio_esp8266.ini
 
-default_envs = esp32-mac-ota
-;default_envs = esp32-mac-serial
+;default_envs = esp32-mac-ota
+default_envs = esp32-mac-serial
 extra_configs = platformio_esp32.ini
 
 [common]
